Updated chapter2 + .gitignore